--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 .card {
     
     width: 85%;
+    max-width: 400px;
     background-color: white;
     border-radius: 25px;
     display: grid;
@@ -65,6 +66,13 @@ p {
 
 .statsOf {
     font-size: 18px;
+}
+
+@media only screen and (min-width: 992px) {
+    .card {
+        margin-top: 15vh;
+        height: 70vh;
+    }
 }
 
 
