git pages image fix

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-    background-image: url(images/bg-pattern-top.svg);
+    background-image: url(./images/bg-pattern-top.svg);
 }
 
 /* .background { grid-area: bg; } */
