--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-    background-image: url(../images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
+    background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
     background-repeat: no-repeat,no-repeat;
     background-position: right 50vw bottom 50vh, left 53vw top 50vh;
 }
@@ -37,7 +37,7 @@ body {
     font-family: 'Kumbh Sans', sans-serif;
     align-items: end;
     box-sizing: border-box;
-    background-image: url(/images/bg-pattern-card.svg);
+    background-image: url(./images/bg-pattern-card.svg);
     background-repeat: no-repeat, repeat;
     background-size: 100%;
 }
